TP-1920 fix view overflow in extra large screens

--- a/public/themes/custom/palvelumanuaali/components/03-organisms/view/view.scss
+++ b/public/themes/custom/palvelumanuaali/components/03-organisms/view/view.scss
@@ -1,3 +1,11 @@
+.block.views-element-container {
+  @include xxl {
+    max-width: 1464px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 .view-filters {
   .form--inline {
     margin-top: $space;
